--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -2,5 +2,5 @@ spring.datasource.url=${JDBC_DATABASE_URL:}
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.properties.hibernate.default_schema=walkingpets
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 server.port=${PORT:5000}
