--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -3,4 +3,6 @@ spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.properties.hibernate.default_schema=dbrkgbtffkllop
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
 spring.jpa.hibernate.ddl-auto=create
+spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
 server.port=${PORT:5000}
