--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,8 +1,7 @@
 spring.datasource.url=${JDBC_DATABASE_URL:}
 spring.datasource.driverClassName=org.postgresql.Driver
-
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 server.port=${PORT:5000}
