--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,9 +1,15 @@
-spring.datasource.password=
-spring.datasource.url=jdbc:h2:mem:teste
-spring.datasource.username=sa
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-spring.h2.console.settings.trace=false
-spring.h2.console.settings.web-allow-others=false
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.show-sql=true
+#spring.datasource.password=
+#spring.datasource.url=jdbc:h2:mem:teste
+#spring.datasource.username=sa
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
+#spring.h2.console.settings.trace=false
+#spring.h2.console.settings.web-allow-others=false
+#spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.show-sql=true
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/teste?currentSchema=pets
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.jpa.hibernate.ddl-auto = create
+spring.jpa.show-sql=false
