--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,15 +1,5 @@
-#spring.datasource.password=
-#spring.datasource.url=jdbc:h2:mem:teste
-#spring.datasource.username=sa
-#spring.h2.console.enabled=true
-#spring.h2.console.path=/h2-console
-#spring.h2.console.settings.trace=false
-#spring.h2.console.settings.web-allow-others=false
-#spring.jpa.hibernate.ddl-auto=create
-#spring.jpa.show-sql=true
-
-spring.datasource.url=jdbc:postgresql://localhost:5432/teste?currentSchema=pets
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres?currentSchema=pets
+spring.datasource.username=luan
+spring.datasource.password=teste
 spring.jpa.hibernate.ddl-auto = create
 spring.jpa.show-sql=false
